2013-12-05  Tejas Belagod  <tejas.belagod@arm.com>

	* rtlanal.c (set_noop_p): Return nonzero in case of redundant vec_select
	for overlapping register lanes.

2013-12-05  Kirill Yukhin  <kirill.yukhin@intel.com>

	* config/i386/i386.c (ix86_expand_builtin): Generate
	reg for readflags built-in when optimizing.
	* config/i386/i386.md (*pushfl<mode>): Rename to ...
	(pushfl<mode>2): This. Fix iterator.
	(*popfl<mode>): Rename to ...
	(*popfl<mode>1): This. Fix iterator.

2013-12-05  Kirill Yukhin  <kirill.yukhin@intel.com>

        * config/i386/i386.c (IX86_BUILTIN_READ_FLAGS): New.
	(IX86_BUILTIN_WRITE_FLAGS): Ditto.
	(ix86_init_mmx_sse_builtins): Define
	__builtin_ia32_writeeflags_u32, __builtin_ia32_writeeflags_u64,
	__builtin_ia32_readeflags_u32, __builtin_ia32_readeflags_u64.
	(ix86_expand_builtin): Expand them.
	* config/i386/ia32intrin.h (__readeflags): New.
	(__writeeflags): Ditto.
	* gcc/config/i386/i386.md (*pushfl<mode>): Ditto.
	(*popfl<mode>1): Ditto.

2013-12-05  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/59374
	* tree-vect-data-refs.c (vect_slp_analyze_data_ref_dependence):
	Commonize known and unknown dependence case fixing the allowed
	read-write dependence case and dropping code that should not
	matter.

2013-12-05  Kirill Yukhin  <kirill.yukhin@intel.com>

	* config/ia64/ia64.md (prologue_allocate_stack): Block auto-
	generation of predicated version.
	(epilogue_deallocate_stack): Ditto.
	(prologue_allocate_stack_pr): Add explicit predicated version.
	(epilogue_deallocate_stack_pr): Ditto.
	* config/ia64/ia64.c (ia64_single_set): Use explicit version.

2013-12-05  Alan Modra  <amodra@gmail.com>

	* configure.ac (BUILD_CXXFLAGS) Don't use ALL_CXXFLAGS for
	build != host.
	<recursive call for build != host>: Clear GMPINC.  Don't bother
	saving CFLAGS.

2013-12-04  Jakub Jelinek  <jakub@redhat.com>
	    Marek Polacek  <polacek@redhat.com>

	* opts.c (common_handle_option): Handle
	-fsanitize=signed-integer-overflow.